<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:descendantFocusability="afterDescendants"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="MainActivity"
    tools:showIn="@layout/app_bar_main"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">

    <ScrollView
        android:nextFocusDown="@+id/article_list"
        android:descendantFocusability="afterDescendants"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/layout_news"
            android:descendantFocusability="afterDescendants"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:descendantFocusability="afterDescendants"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:id="@+id/article_list_container"
                android:layout_height="0dp" />

        </LinearLayout>
    </ScrollView>
</FrameLayout>