<resources>
    <string name="app_name">Black Tax and White Benefits</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="fetching_articles">Fetching articles</string>
    <string name="fetching_articles_message">Please wait while we load your articles.</string>

    <!-- This string is all the recipient see in text message and the title of email msg -->
...

    <!-- content descriptions -->
    <string name="featured_image">Featured Image</string>
    <string name="detail_image">Article Detail Image</string>
    <string name="thumbnail_image">Thumbnail Image</string>
    <string name="avatar_image">Avatar Image</string>
    <string name="share_article_fab">Share Article button</string>
    <string name="previous">previous</string>
    <string name="next">next</string>


</resources>

